Nam/.antlr/CSELParser.py
# Generated from c:\Users\baonguyen\Desktop\Nam\CSEL.g4 by ANTLR 4.8
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class CSELParser ( Parser ):

    grammarFileName = "CSEL.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "'Break'", "'Continue'", 
                     "'If'", "'Elif'", "'Else'", "'While'", "'For'", "'Of'", 
                     "'In'", "'Function'", "'Let'", "'Call'", "'Return'", 
                     "'Constant'", "<INVALID>", "<INVALID>", "'='", "';'", 
                     "'('", "')'", "'{'", "'}'", "'['", "']'", "':'", "'.'", 
                     "','", "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "'+'", "'-'", 
                     "'%'", "'*'", "'/'", "'!'", "'!='", "'&&'", "'||'", 
                     "'=='", "'>'", "'>='", "'<'", "'<='", "'==.'", "'+.'" ]

    symbolicNames = [ "<INVALID>", "KEYWORDS", "BREAK", "CONTINUE", "IF", 
                      "ELIF", "ELSE", "WHILE", "FOR", "OF", "IN", "FUNCT", 
                      "LET", "CALL", "RETURN", "CONST", "ID", "ID_CONST", 
                      "EQUAL", "SEMI", "LP", "RP", "LCB", "RCB", "LSB", 
                      "RSB", "COLON", "PERIOD", "COMMA", "COMMMENT", "UNTERMINATED_COMMENT", 
                      "NUM_LITERAL", "BOOL_LITERAL", "STRING_LITERAL", "UNCLOSE_STRING", 
                      "ILLEGAL_ESCAPE", "ADD", "SUB", "MODUL", "MUL", "DIV", 
                      "NOT", "NE", "AND", "OR", "EQ", "L", "LB", "B", "BB", 
                      "CS", "MS", "WS", "NEWLINE", "ERROR_CHAR" ]

    RULE_program = 0
    RULE_list_stmt = 1
    RULE_stmt = 2
    RULE_expr = 3
    RULE_expr1 = 4
    RULE_expr2 = 5
    RULE_expr3 = 6
    RULE_expr4 = 7
    RULE_expr5 = 8
    RULE_expr6 = 9
    RULE_key_operator = 10
    RULE_index_expr = 11
    RULE_id_operator = 12
    RULE_expr7 = 13
    RULE_expr8 = 14
    RULE_expr9 = 15
    RULE_condition = 16
    RULE_if_stmt = 17
    RULE_list_elif = 18
    RULE_elif_stmt = 19
    RULE_else_stmt = 20
    RULE_for_in_stmt = 21
    RULE_for_of_stmt = 22
    RULE_while_stmt = 23
    RULE_break_stmt = 24
    RULE_continue_stmt = 25
    RULE_call = 26
    RULE_call_parameters = 27
    RULE_call_parameter = 28
    RULE_return_stmt = 29
    RULE_func_declare = 30
    RULE_list_parameters = 31
    RULE_parameter = 32
    RULE_var_declare = 33
    RULE_const_declare = 34
    RULE_list_declare_var = 35
    RULE_list_declare_const = 36
    RULE_id_var_array = 37
    RULE_id_const_array = 38
    RULE_declare_var = 39
    RULE_declare_const = 40
    RULE_declare_type = 41
    RULE_declare_assign = 42
    RULE_assign_stmt = 43
    RULE_lhs = 44
    RULE_index = 45
    RULE_key = 46
    RULE_str_expr = 47
    RULE_str_op = 48
    RULE_str_operand = 49
    RULE_array_literal = 50
    RULE_literal = 51
    RULE_array_list = 52
    RULE_num_list = 53
    RULE_bool_list = 54
    RULE_str_list = 55
    RULE_json_list = 56
    RULE_json_literal = 57
    RULE_json_decls = 58
    RULE_json_declare = 59

    ruleNames =  [ "program", "list_stmt", "stmt", "expr", "expr1", "expr2", 
                   "expr3", "expr4", "expr5", "expr6", "key_operator", "index_expr", 
                   "id_operator", "expr7", "expr8", "expr9", "condition", 
                   "if_stmt", "list_elif", "elif_stmt", "else_stmt", "for_in_stmt", 
                   "for_of_stmt", "while_stmt", "break_stmt", "continue_stmt", 
                   "call", "call_parameters", "call_parameter", "return_stmt", 
                   "func_declare", "list_parameters", "parameter", "var_declare", 
                   "const_declare", "list_declare_var", "list_declare_const", 
                   "id_var_array", "id_const_array", "declare_var", "declare_const", 
                   "declare_type", "declare_assign", "assign_stmt", "lhs", 
                   "index", "key", "str_expr", "str_op", "str_operand", 
                   "array_literal", "literal", "array_list", "num_list", 
                   "bool_list", "str_list", "json_list", "json_literal", 
                   "json_decls", "json_declare" ]

    EOF = Token.EOF
    KEYWORDS=1
    BREAK=2
    CONTINUE=3
    IF=4
    ELIF=5
    ELSE=6
    WHILE=7
    FOR=8
    OF=9
    IN=10
    FUNCT=11
    LET=12
    CALL=13
    RETURN=14
    CONST=15
    ID=16
    ID_CONST=17
    EQUAL=18
    SEMI=19
    LP=20
    RP=21
    LCB=22
    RCB=23
    LSB=24
    RSB=25
    COLON=26
    PERIOD=27
    COMMA=28
    COMMMENT=29
    UNTERMINATED_COMMENT=30
    NUM_LITERAL=31
    BOOL_LITERAL=32
    STRING_LITERAL=33
    UNCLOSE_STRING=34
    ILLEGAL_ESCAPE=35
    ADD=36
    SUB=37
    MODUL=38
    MUL=39
    DIV=40
    NOT=41
    NE=42
    AND=43
    OR=44
    EQ=45
    L=46
    LB=47
    B=48
    BB=49
    CS=50
    MS=51
    WS=52
    NEWLINE=53
    ERROR_CHAR=54

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.8")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(CSELParser.EOF, 0)

        def const_declare(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CSELParser.Const_declareContext)
            else:
                return self.getTypedRuleContext(CSELParser.Const_declareContext,i)


        def SEMI(self, i:int=None):
            if i is None:
                return self.getTokens(CSELParser.SEMI)
            else:
                return self.getToken(CSELParser.SEMI, i)

        def var_declare(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CSELParser.Var_declareContext)
            else:
                return self.getTypedRuleContext(CSELParser.Var_declareContext,i)


        def func_declare(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CSELParser.Func_declareContext)
            else:
                return self.getTypedRuleContext(CSELParser.Func_declareContext,i)


        def getRuleIndex(self):
            return CSELParser.RULE_program




    def program(self):

        localctx = CSELParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 129
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << CSELParser.FUNCT) | (1 << CSELParser.LET) | (1 << CSELParser.CONST))) != 0):
                self.state = 127
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [CSELParser.CONST]:
                    self.state = 120
                    self.const_declare()
                    self.state = 121
                    self.match(CSELParser.SEMI)
                    pass
                elif token in [CSELParser.LET]:
                    self.state = 123
                    self.var_declare()
                    self.state = 124
                    self.match(CSELParser.SEMI)
                    pass
                elif token in [CSELParser.FUNCT]:
                    self.state = 126
                    self.func_declare()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 131
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 132
            self.match(CSELParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class List_stmtContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def stmt(self):
            return self.getTypedRuleContext(CSELParser.StmtContext,0)


        def list_stmt(self):
            return self.getTypedRuleContext(CSELParser.List_stmtContext,0)


        def getRuleIndex(self):
            return CSELParser.RULE_list_stmt




    def list_stmt(self):

        localctx = CSELParser.List_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_list_stmt)
        try:
            self.state = 138
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 134
                self.stmt()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 135
                self.stmt()
                self.state = 136
                self.list_stmt()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StmtContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var_declare(self):
            return self.getTypedRuleContext(CSELParser.Var_declareContext,0)


        def SEMI(self):
            return self.getToken(CSELParser.SEMI, 0)

        def const_declare(self):
            return self.getTypedRuleContext(CSELParser.Const_declareContext,0)


        def assign_stmt(self):
            return self.getTypedRuleContext(CSELParser.Assign_stmtContext,0)


        def if_stmt(self):
            return self.getTypedRuleContext(CSELParser.If_stmtContext,0)


        def for_in_stmt(self):
            return self.getTypedRuleContext(CSELParser.For_in_stmtContext,0)


        def for_of_stmt(self):
            return self.getTypedRuleContext(CSELParser.For_of_stmtContext,0)


        def break_stmt(self):
            return self.getTypedRuleContext(CSELParser.Break_stmtContext,0)


        def while_stmt(self):
            return self.getTypedRuleContext(CSELParser.While_stmtContext,0)


        def continue_stmt(self):
            return self.getTypedRuleContext(CSELParser.Continue_stmtContext,0)


        def return_stmt(self):
            return self.getTypedRuleContext(CSELParser.Return_stmtContext,0)


        def call(self):
            return self.getTypedRuleContext(CSELParser.CallContext,0)


        def getRuleIndex(self):
            return CSELParser.RULE_stmt




    def stmt(self):

        localctx = CSELParser.StmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_stmt)
        try:
            self.state = 165
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 140
                self.var_declare()
                self.state = 141
                self.match(CSELParser.SEMI)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 143
                self.const_declare()
                self.state = 144
                self.match(CSELParser.SEMI)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 146
                self.assign_stmt()
                self.state = 147
                self.match(CSELParser.SEMI)
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 149
                self.if_stmt()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 150
                self.for_in_stmt()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 151
                self.for_of_stmt()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 152
                self.break_stmt()
                self.state = 153
                self.match(CSELParser.SEMI)
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 155
                self.while_stmt()
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 156
                self.continue_stmt()
                self.state = 157
                self.match(CSELParser.SEMI)
                pass

            elif la_ == 10:
                self.enterOuterAlt(localctx, 10)
                self.state = 159
                self.return_stmt()
                self.state = 160
                self.match(CSELParser.SEMI)
                pass

            elif la_ == 11:
                self.enterOuterAlt(localctx, 11)
                self.state = 162
                self.call()
                self.state = 163
                self.match(CSELParser.SEMI)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr1(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CSELParser.Expr1Context)
            else:
                return self.getTypedRuleContext(CSELParser.Expr1Context,i)


        def EQ(self):
            return self.getToken(CSELParser.EQ, 0)

        def NE(self):
            return self.getToken(CSELParser.NE, 0)

        def B(self):
            return self.getToken(CSELParser.B, 0)

        def BB(self):
            return self.getToken(CSELParser.BB, 0)

        def L(self):
            return self.getToken(CSELParser.L, 0)

        def LB(self):
            return self.getToken(CSELParser.LB, 0)

        def getRuleIndex(self):
            return CSELParser.RULE_expr




    def expr(self):

        localctx = CSELParser.ExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_expr)
        self._la = 0 # Token type
        try:
            self.state = 172
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 167
                self.expr1(0)
                self.state = 168
                _la = self._input.LA(1)
                if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << CSELParser.NE) | (1 << CSELParser.EQ) | (1 << CSELParser.L) | (1 << CSELParser.LB) | (1 << CSELParser.B) | (1 << CSELParser.BB))) != 0)):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 169
                self.expr1(0)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 171
                self.expr1(0)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Expr1Context(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr2(self):
            return self.getTypedRuleContext(CSELParser.Expr2Context,0)


        def expr1(self):
            return self.getTypedRuleContext(CSELParser.Expr1Context,0)


        def AND(self):
            return self.getToken(CSELParser.AND, 0)

        def OR(self):
            return self.getToken(CSELParser.OR, 0)

        def getRuleIndex(self):
            return CSELParser.RULE_expr1



    def expr1(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = CSELParser.Expr1Context(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 8
        self.enterRecursionRule(localctx, 8, self.RULE_expr1, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 175
            self.expr2(0)
            self._ctx.stop = self._input.LT(-1)
            self.state = 182
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,5,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = CSELParser.Expr1Context(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_expr1)
                    self.state = 177
                    if not self.precpred(self._ctx, 2):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                    self.state = 178
                    _la = self._input.LA(1)
                    if not(_la==CSELParser.AND or _la==CSELParser.OR):
                        self._errHandler.recoverInline(self)
                    else:
                        self._errHandler.reportMatch(self)
                        self.consume()
                    self.state = 179
                    self.expr2(0) 
                self.state = 184
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,5,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class Expr2Context(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr3(self):
            return self.getTypedRuleContext(CSELParser.Expr3Context,0)


        def expr2(self):
            return self.getTypedRuleContext(CSELParser.Expr2Context,0)


        def ADD(self):
            return self.getToken(CSELParser.ADD, 0)

        def SUB(self):
            return self.getToken(CSELParser.SUB, 0)

        def getRuleIndex(self):
            return CSELParser.RULE_expr2



    def expr2(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = CSELParser.Expr2Context(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 10
        self.enterRecursionRule(localctx, 10, self.RULE_expr2, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 186
            self.expr3(0)
            self._ctx.stop = self._input.LT(-1)
            self.state = 193
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,6,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = CSELParser.Expr2Context(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_expr2)
                    self.state = 188
                    if not self.precpred(self._ctx, 2):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                    self.state = 189
                    _la = self._input.LA(1)
                    if not(_la==CSELParser.ADD or _la==CSELParser.SUB):
                        self._errHandler.recoverInline(self)
                    else:
                        self._errHandler.reportMatch(self)
                        self.consume()
                    self.state = 190
                    self.expr3(0) 
                self.state = 195
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,6,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class Expr3Context(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr4(self):
            return self.getTypedRuleContext(CSELParser.Expr4Context,0)


        def expr3(self):
            return self.getTypedRuleContext(CSELParser.Expr3Context,0)


        def MUL(self):
            return self.getToken(CSELParser.MUL, 0)

        def DIV(self):
            return self.getToken(CSELParser.DIV, 0)

        def MODUL(self):
            return self.getToken(CSELParser.MODUL, 0)

        def getRuleIndex(self):
            return CSELParser.RULE_expr3



    def expr3(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = CSELParser.Expr3Context(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 12
        self.enterRecursionRule(localctx, 12, self.RULE_expr3, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 197
            self.expr4()
            self._ctx.stop = self._input.LT(-1)
            self.state = 204
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,7,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = CSELParser.Expr3Context(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_expr3)
                    self.state = 199
                    if not self.precpred(self._ctx, 2):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                    self.state = 200
                    _la = self._input.LA(1)
                    if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << CSELParser.MODUL) | (1 << CSELParser.MUL) | (1 << CSELParser.DIV))) != 0)):
                        self._errHandler.recoverInline(self)
                    else:
                        self._errHandler.reportMatch(self)
                        self.consume()
                    self.state = 201
                    self.expr4() 
                self.state = 206
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,7,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class Expr4Context(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NOT(self):
            return self.getToken(CSELParser.NOT, 0)

        def expr4(self):
            return self.getTypedRuleContext(CSELParser.Expr4Context,0)


        def expr5(self):
            return self.getTypedRuleContext(CSELParser.Expr5Context,0)


        def getRuleIndex(self):
            return CSELParser.RULE_expr4




    def expr4(self):

        localctx = CSELParser.Expr4Context(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_expr4)
        try:
            self.state = 210
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [CSELParser.NOT]:
                self.enterOuterAlt(localctx, 1)
                self.state = 207
                self.match(CSELParser.NOT)
                self.state = 208
                self.expr4()
                pass
            elif token in [CSELParser.CALL, CSELParser.ID, CSELParser.ID_CONST, CSELParser.LP, CSELParser.LCB, CSELParser.LSB, CSELParser.NUM_LITERAL, CSELParser.BOOL_LITERAL, CSELParser.STRING_LITERAL, CSELParser.SUB]:
                self.enterOuterAlt(localctx, 2)
                self.state = 209
                self.expr5()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Expr5Context(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SUB(self):
            return self.getToken(CSELParser.SUB, 0)

        def expr5(self):
            return self.getTypedRuleContext(CSELParser.Expr5Context,0)


        def expr6(self):
            return self.getTypedRuleContext(CSELParser.Expr6Context,0)


        def getRuleIndex(self):
            return CSELParser.RULE_expr5




    def expr5(self):

        localctx = CSELParser.Expr5Context(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_expr5)
        try:
            self.state = 215
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [CSELParser.SUB]:
                self.enterOuterAlt(localctx, 1)
                self.state = 212
                self.match(CSELParser.SUB)
                self.state = 213
                self.expr5()
                pass
            elif token in [CSELParser.CALL, CSELParser.ID, CSELParser.ID_CONST, CSELParser.LP, CSELParser.LCB, CSELParser.LSB, CSELParser.NUM_LITERAL, CSELParser.BOOL_LITERAL, CSELParser.STRING_LITERAL]:
                self.enterOuterAlt(localctx, 2)
                self.state = 214
                self.expr6(0)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Expr6Context(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr7(self):
            return self.getTypedRuleContext(CSELParser.Expr7Context,0)


        def expr6(self):
            return self.getTypedRuleContext(CSELParser.Expr6Context,0)


        def index_expr(self):
            return self.getTypedRuleContext(CSELParser.Index_exprContext,0)


        def key_operator(self):
            return self.getTypedRuleContext(CSELParser.Key_operatorContext,0)


        def getRuleIndex(self):
            return CSELParser.RULE_expr6


